--- a/stacks/frappe-bench-v13.yml
+++ b/stacks/frappe-bench-v13.yml
@@ -130,12 +130,14 @@ services:
     image: frappe/erpnext-worker:${ERPNEXT_VERSION?Variable ERPNEXT_VERSION not set}
     deploy:
       restart_policy:
-        condition: not
-    command: new
+        condition: on-failure
+    command: schedule
     environment:
       - SITE_NAME=${SITE_NAME}
-      - INSTALL_APPS=${INSTALL_APPS}
+      - DB_ROOT_USER=${DB_ROOT_USER}
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
+      - INSTALL_APPS=${INSTALL_APPS}
     volumes:
       - sites-vol:/home/frappe/frappe-bench/sites:rw
     networks:
