--- a/stacks/traefik.yml
+++ b/stacks/traefik.yml
@@ -3,7 +3,7 @@ version: '3.3'
 services:
 
   traefik:
-    # Use the latest v2.2.x Traefik image available
+    # Use the latest Traefik image
     image: traefik:v2.2
     ports:
       # Listen on port 80, default for HTTP, necessary to redirect to HTTPS
@@ -50,9 +50,6 @@ services:
         - traefik.http.routers.traefik-public-https.middlewares=admin-auth
         # Define the port inside of the Docker service to use
         - traefik.http.services.traefik-public.loadbalancer.server.port=8080
-        - traefik.http.routers.http-catchall.rule=hostregexp(`{host:.+}`)
-        - traefik.http.routers.http-catchall.entrypoints=web
-        - traefik.http.routers.http-catchall.middlewares=redirect-to-https
     volumes:
       # Add Docker as a mounted volume, so that Traefik can read the labels of other services
       - /var/run/docker.sock:/var/run/docker.sock:ro
@@ -67,13 +64,10 @@ services:
       - --providers.docker.exposedbydefault=false
       # Enable Docker Swarm mode
       - --providers.docker.swarmmode
-      # Create an entrypoint "http" listening on port 80
+      # Create an entrypoint "http" listening on address 80
       - --entrypoints.http.address=:80
-      # Create an entrypoint "https" listening on port 443
+      # Create an entrypoint "https" listening on address 443
       - --entrypoints.https.address=:443
-      # Challenge
-      - --certificatesresolvers.le.acme.httpchallenge.entrypoint=web
-      - --certificatesresolvers.le.acme.httpchallenge=true
       # Create the certificate resolver "le" for Let's Encrypt, uses the environment variable EMAIL
       - --certificatesresolvers.le.acme.email=${EMAIL?Variable not set}
       # Store the Let's Encrypt certificates in the mounted volume
