--- a/stacks/frappe-bench-v13.yml
+++ b/stacks/frappe-bench-v13.yml
@@ -32,7 +32,7 @@ services:
       - frappe-network
 
   erpnext-nginx:
-    image: frappe/erpnext-nginx:${ERPNEXT_VERSION?Variable ERPNEXT_VERSION not set}
+    image: gallon-erpnext-nginx:${ERPNEXT_VERSION?Variable ERPNEXT_VERSION not set}
     environment:
       - UPSTREAM_REAL_IP_ADDRESS=10.0.0.0/8
       - FRAPPE_PY=erpnext-python
@@ -62,7 +62,7 @@ services:
         - "traefik.http.services.erpnext-nginx.loadbalancer.server.port=80"
 
   erpnext-python:
-    image: frappe/erpnext-worker:${ERPNEXT_VERSION?Variable ERPNEXT_VERSION not set}
+    image: gallon-erpnext-worker:${ERPNEXT_VERSION?Variable ERPNEXT_VERSION not set}
     deploy:
       restart_policy:
         condition: on-failure
@@ -90,7 +90,7 @@ services:
       - frappe-network
 
   erpnext-worker-default:
-    image: frappe/erpnext-worker:${ERPNEXT_VERSION?Variable ERPNEXT_VERSION not set}
+    image: gallon-erpnext-worker:${ERPNEXT_VERSION?Variable ERPNEXT_VERSION not set}
     deploy:
       restart_policy:
         condition: on-failure
@@ -101,7 +101,7 @@ services:
       - frappe-network
 
   erpnext-worker-short:
-    image: frappe/erpnext-worker:${ERPNEXT_VERSION?Variable ERPNEXT_VERSION not set}
+    image: gallon-erpnext-worker:${ERPNEXT_VERSION?Variable ERPNEXT_VERSION not set}
     deploy:
       restart_policy:
         condition: on-failure
@@ -114,7 +114,7 @@ services:
       - frappe-network
 
   erpnext-worker-long:
-    image: frappe/erpnext-worker:${ERPNEXT_VERSION?Variable ERPNEXT_VERSION not set}
+    image: gallon-erpnext-worker:${ERPNEXT_VERSION?Variable ERPNEXT_VERSION not set}
     deploy:
       restart_policy:
         condition: on-failure
@@ -127,7 +127,7 @@ services:
       - frappe-network
 
   frappe-schedule:
-    image: frappe/erpnext-worker:${ERPNEXT_VERSION?Variable ERPNEXT_VERSION not set}
+    image: gallon-erpnext-worker:${ERPNEXT_VERSION?Variable ERPNEXT_VERSION not set}
     deploy:
       restart_policy:
         condition: on-failure
