--- a/single-node/.env
+++ b/single-node/.env
@@ -2,11 +2,11 @@ LETSENCRYPT_EMAIL=lpillaga@gmail.com
 ERPNEXT_VERSION=v13.15.0
 FRAPPE_VERSION=v13.15.0
 MARIADB_HOST=mariadb
-MYSQL_ROOT_PASSWORD=Gallon9874$$
+MYSQL_ROOT_PASSWORD=admin
 SITE_NAME=almacen.elgallonegroec.com
 SITES=`almacen.elgallonegroec.com`
 DB_ROOT_USER=root
-ADMIN_PASSWORD=Gallon9874$$
+ADMIN_PASSWORD=admin
 INSTALL_APPS=erpnext
 ENTRYPOINT_LABEL=traefik.http.routers.erpnext-nginx.entrypoints=websecure
 CERT_RESOLVER_LABEL=traefik.http.routers.erpnext-nginx.tls.certresolver=myresolver
